--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
 
           <div class="col-sm-11 body" style="background-color:#b69b7d;">
-              <img src="images\not dotted photo.png" alt="photo of joshua taylor" width="35%" class="animate__animated animate__backInLeft">
+              <img src="not dotted photo.png" alt="photo of joshua taylor" width="35%" class="animate__animated animate__backInLeft">
               
             <div class="typewriter">
             <div>
