--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             </div>
 
           <div class="col-sm-11 body" style="background-color:#b69b7d;">
-              <img src="images\typing.png" alt="photo of man typing" width="35%" class="animate__animated animate__backInLeft">
+              <img src="typing.png" alt="photo of man typing" width="35%" class="animate__animated animate__backInLeft">
               
             <div>
             <div>
