--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
           <div class="col-sm-11 body" style="background-color:#b69b7d;">
               
-            <img src="images\contact page.png" alt="photo of paper planes" width="55%" class="animate__animated animate__zoomInRight">
+            <img src="contact page.png" alt="photo of paper planes" width="55%" class="animate__animated animate__zoomInRight">
               
             <div>
                 <div class="row no-gutters">
