--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <h2 class="animate__animated animate__rotateInDownLeft photo-details">About me:</h2>
                 <dl class="b">
                     <dt class="cfh"> Carolina Fintech Hub</dt>
-                    <dd class="about">I began my developer training with Carolina Fintech Hub in march of 2022. Through an intensive, 6-month, boot camp style training program, I developed the necessary skills for becomming a web developer. Upon compeletion, I began my career with CTAC bank. In my role with CTAC I am responsible for developings, enhancing, debugging, testnig software applications. These application program solutions involve diverse development platforms, software, hardware, technologies and tools. </dd>
+                    <dd class="about">I began my developer training with Carolina Fintech Hub in march of 2022. Through an intensive, 6-month, boot camp style training program, I developed the necessary skills to successfully gain a role with CTAC Bank.</dd>
                     <dt class="cfh">CTAC Bank</dt>  
                     <dd class="about">Upon compeletion, I began my career with CTAC bank. In my role with CTAC I am responsible for developing, enhancing, debugging, and testing software applications. These application program solutions involve diverse development platforms, software, hardware, technologies and tools. </dd></dl>
                        
