--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
               
             <div>
             <div>
-                <h2 class="animate__animated animate__rotateInDownLeft photo-details">About me:</h2>
+                <h2 class="animate__animated animate__fadeInDown photo-details">About me:</h2>
                 <dl class="b">
                     <dt class="cfh"> Carolina Fintech Hub</dt>
                     <dd class="about">I began my developer training with Carolina Fintech Hub in march of 2022. Through an intensive, 6-month, boot camp style training program, I developed the necessary skills to successfully gain a role with CTAC Bank.</dd>
