--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             </div>
 
           <div class="col-sm-11 body" style="background-color:#b69b7d;">
-              <img src="https://media.istockphoto.com/photos/computer-programmer-working-on-laptop-picture-id1265176772?k=20&m=1265176772&s=612x612&w=0&h=-7KsBcx2mmQ9LGjRPlhz9pZ1VQHPMaXmK28DiFwOf7M=" alt="photo of man typing" width="35%" class="animate__animated animate__backInLeft">
+              <img src="typing1.png" alt="photo of man typing" width="35%" class="animate__animated animate__backInLeft">
               
             <div>
             <div>
