--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
             <div>
                 <h2 class="animate__animated animate__fadeInDown photo-details">About me:</h2>
                 <dl class="b">
-                    <dt class="cfh"> Carolina Fintech Hub</dt>
-                    <dd class="about">I began my developer training with Carolina Fintech Hub in march of 2022. Through an intensive, 6-month, boot camp style training program, I developed the necessary skills to successfully gain a role with CTAC Bank.</dd>
-                    <dt class="cfh">CTAC Bank</dt>  
+                    <dt class="cfh"> Carolina Fintech Hub</dt><br>
+                    <dd class="about">I began my developer training with Carolina Fintech Hub in march of 2022. Through an intensive, 6-month, boot camp style training program, I developed the necessary skills to successfully gain a role with CTAC Bank.</dd><br><br>
+                    <dt class="cfh">CTAC Bank</dt><br>  
                     <dd class="about">Upon compeletion, I began my career with CTAC bank. In my role with CTAC I am responsible for developing, enhancing, debugging, and testing software applications. These application program solutions involve diverse development platforms, software, hardware, technologies and tools. </dd></dl>
                        
                 </div>
